<resources>
    <string name="app_name">性福在线</string>
    <string name="app_name1">麻花棋牌</string>
    <string name="app_name_jstz">嘉盛投资</string>
    <string name="app_name_rytz">瑞银投资</string>

    <string name="action_update">更新</string>
    <string name="action_share">分享</string>
    <string name="actionbar_search">搜索</string>
    <string name="actionbar_more">更多信息</string>
    <string name="actionbar_webview_share">分享到</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">浏览器打开</string>
    <string name="actionbar_webview_refresh">刷新页面</string>
    <string name="actionbar_webview_back">后退</string>
    <string name="actionbar_webview_advance">前进</string>
    <string name="actionbar_webview_home">首页</string>
    <string name="actionbar_webview_clear">清除缓存</string>
    <string name="actionbar_share">分享给朋友\(^o^)/~</string>
    <string name="string_hit">搜索或输入网址</string>
    <string name="bt_open_url">打开网页</string>
    <string name="text_baidu">百度一下</string>
    <string name="text_movie">视频播放</string>
    <string name="text_upload_photo">上传图片测试</string>
    <string name="text_js">电话、短信、邮件、注入js</string>
    <string name="js_android">js与android原生代码互调</string>
    <string name="deeplink">DeepLink 测试</string>
    <string name="welcome_string">欢迎界面</string>
</resources>
