<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionbar_share"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_share"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_cope"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_cope"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/actionbar_webview_back"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_back"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_webview_advance"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_advance"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_webview_home"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_webview_refresh"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_webview_clear"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionbar_open"
        android:orderInCategory="100"
        android:title="@string/actionbar_webview_open"
        app:showAsAction="never" />
</menu>